--- a/notebooks/Tutorial.ipynb
+++ b/notebooks/Tutorial.ipynb
@@ -34,6 +34,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{u'fields': [{u'name': u'Index', u'type': u'INTEGER'},\n",
+       "  {u'name': u'Run', u'type': u'INTEGER'},\n",
+       "  {u'name': u'Event', u'type': u'INTEGER'},\n",
+       "  {u'name': u'UTime', u'type': u'INTEGER'},\n",
+       "  {u'name': u'JMDCTime', u'type': u'FLOAT'},\n",
+       "  {u'name': u'ThetaS', u'type': u'FLOAT'},\n",
+       "  {u'name': u'PhiS', u'type': u'FLOAT'},\n",
+       "  {u'name': u'Livetime', u'type': u'FLOAT'},\n",
+       "  {u'name': u'Latitude', u'type': u'FLOAT'},\n",
+       "  {u'name': u'Rcutoff', u'type': u'FLOAT'},\n",
+       "  {u'name': u'PhysBPatt', u'type': u'INTEGER'},\n",
+       "  {u'name': u'JMembPatt', u'type': u'INTEGER'},\n",
+       "  {u'name': u'fStatus', u'type': u'STRING'},\n",
+       "  {u'description': u'notFirstTwo,notInSaaCut,zenithCut,runtypeCut,minimumbiasTOF,minimumbiasTRIGG,minimumbiasTRD,minimumbiasTRACKER,goldenTOF,goldenTRD,goldenTRACKER,aParticle,aTrack,aTRDTrack,oneParticle,oneTrack,oneTRDTrack,chargeOne,downGoing,betaNotCrazy,physicsTrigger,aRing,oneRing,noNaF,ringGood,ringClean,ringProb,ringPMTs,ringChargeConsistency,ringPhotoElectrons,ringExpPhe,ringBetaCons,ringNoNaFBorder',\n",
+       "   u'name': u'selStatus',\n",
+       "   u'type': u'INTEGER'},\n",
+       "  {u'name': u'R', u'type': u'FLOAT'},\n",
+       "  {u'name': u'Rfull', u'type': u'FLOAT'},\n",
+       "  {u'name': u'BetaTOF', u'type': u'FLOAT'},\n",
+       "  {u'name': u'BetaRICH', u'type': u'FLOAT'},\n",
+       "  {u'name': u'EnergyE', u'type': u'FLOAT'},\n",
+       "  {u'name': u'NTRDclusters', u'type': u'INTEGER'},\n",
+       "  {u'name': u'EdepTRD', u'type': u'FLOAT'},\n",
+       "  {u'name': u'ChargeTRD', u'type': u'FLOAT'},\n",
+       "  {u'name': u'NTofClusters', u'type': u'INTEGER'},\n",
+       "  {u'name': u'NTofClustersUsed', u'type': u'INTEGER'},\n",
+       "  {u'description': u'', u'name': u'EdepTOF', u'type': u'STRING'},\n",
+       "  {u'name': u'ChargeTOF', u'type': u'FLOAT'}]}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "schema"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "collapsed": false
