work on acceptance

--- a/notebooks/ProduceMatrices.ipynb
+++ b/notebooks/ProduceMatrices.ipynb
@@ -32,18 +32,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "!cp ../mcmc_py/pd_model.py .\n",
     "from pd_model import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
